test button border dashed, npmrc uncommented

--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -4,7 +4,7 @@
 /* button Default */
 .uq-button {
   background-color: $button-bg-color;
-  border: 2px solid $button-border-color;
+  border: 2px dashed $button-border-color;
   border-radius: 5px;
   box-sizing: border-box;
   color: $button-color;
